--- a/sxw_common_lib/build.gradle
+++ b/sxw_common_lib/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'com.chenenyu.router'
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.ZengCS'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
