功能点描述：1.通过SSOUtil获取当前学生信息，包括:TOKEN和UserInfo       2.将TOKEN设置到HTTPManager中       3.访问A接口       4.Token过期,刷新Token       	4.1 Token刷新成功，自动重试A接口       	4.2 Token刷新失败，自动重新登录       		4.2.1 重新登录成功，自动重试A接口       		4.2.2 重新登录失败，发送错误Event，监听到Event后打开通用登录页面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     // permission 3.1.0
     implementation var.permissionsDispatcher
     annotationProcessor var.permissionsDispatcherProcessor
+    // AndroidAnnotationsPermissionsDispatcherPlugin
+    annotationProcessor "com.github.AleksanderMielczarek:AndroidAnnotationsPermissionsDispatcherPlugin:2.1.1"
 }
