--- a/sxw_common_lib/src/main/AndroidManifest.xml
+++ b/sxw_common_lib/src/main/AndroidManifest.xml
@@ -18,6 +18,14 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
+
+        <!--AutoLayout设计图尺寸-->
+        <meta-data
+            android:name="design_width"
+            android:value="1920" />
+        <meta-data
+            android:name="design_height"
+            android:value="1200" />
     </application>
 
 </manifest>
