功能点描述：删除buildTool

--- a/autolayout/build.gradle
+++ b/autolayout/build.gradle
@@ -4,7 +4,7 @@ group = 'com.github.ZengCS'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
-    buildToolsVersion rootProject.ext.android.buildToolsVersion
+//    buildToolsVersion rootProject.ext.android.buildToolsVersion
 
     defaultConfig {
         minSdkVersion rootProject.ext.android.minSdkVersion
